// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TaskDetails renders correctly 1`] = `
Array [
  <Header
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    data-testid="task-details-page"
    loading={true}
  />,
]
`;

exports[`Component - TaskDetails renders correctly 2`] = `
Array [
  <Header
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    data-testid="task-details-page"
    loading={false}
  />,
]
`;
